--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+    <script>
+  // If the link has ?id=... it will jump straight to the reader
+  const urlParams = new URLSearchParams(window.location.search);
+  const comicId = urlParams.get('id');
+  if (comicId) {
+    window.location.href = `https://zaz444.github.io/comiccore/reader.html?id=${comicId}`;
+  }
+</script> 
     <link rel="stylesheet" href="theme.css">
+
     <script src="theme.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ComicCore - Home</title>
@@ -377,4 +387,5 @@
         ">← Back to Ratio</button>
     </div>
 </body>
+
 </html>
