Add meta tags for social media sharing
Added Open Graph and Twitter meta tags for improved sharing.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://zaz444.github.io/comiccore/">
+<meta property="og:title" content="ComicCore - Interactive Comics">
+<meta property="og:description" content="Check out my latest comic on ComicCore!">
+<meta property="og:image" content="https://media.discordapp.net/attachments/1472088820584419450/1475026485256523816/IMG_1777.png?ex=699bfcf6&is=699aab76&hm=4d03c9164ead0826a54cb0d5225719bbab724d2cf9296a72589bcb41db1f815d&=&format=webp&quality=lossless">
 
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="https://media.discordapp.net/attachments/1472088820584419450/1475026485256523816/IMG_1777.png?ex=699bfcf6&is=699aab76&hm=4d03c9164ead0826a54cb0d5225719bbab724d2cf9296a72589bcb41db1f815d&=&format=webp&quality=lossless">
+    
     <script>
   // If the link has ?id=... it will jump straight to the reader
   const urlParams = new URLSearchParams(window.location.search);
@@ -389,3 +397,4 @@
 </body>
 
 </html>
+
