Fixed share logic and cleaned file with Claude

--- a/reader.html
+++ b/reader.html
@@ -259,7 +259,6 @@ opacity:0;transition:.25s;z-index:1000;white-space:nowrap;pointer-events:none;
     <div class="share-title" id="sh-title">Share Comic</div>
     <div class="share-sub" id="sh-sub">Anyone with this link can read it</div>
 
-```
 <!-- Copy link -->
 <div class="link-row">
   <span class="link-text" id="sh-link-text">loading…</span>
@@ -292,7 +291,6 @@ opacity:0;transition:.25s;z-index:1000;white-space:nowrap;pointer-events:none;
 </div>
 
 <button class="sheet-close" onclick="closeShare()">Close</button>
-```
 
   </div>
 </div>
@@ -303,11 +301,8 @@ opacity:0;transition:.25s;z-index:1000;white-space:nowrap;pointer-events:none;
 
 <script>
 // ── Config ────────────────────────────────────────────────
-// Change this to your deployed Supabase edge function URL
-// It should look like: https://mmycqeejhguzhtzkyjaj.supabase.co/functions/v1/comic-preview
-const PREVIEW_BASE = 'https://mmycqeejhguzhtzkyjaj.supabase.co/functions/v1/comic-preview';
-// The base URL of your app (for fallback direct links)
-const APP_BASE = window.location.origin;
+// Canonical live URL for the reader — used for all share links.
+const READER_BASE = 'https://zaz444.github.io/comiccore/reader.html';
 
 const _sb = supabase.createClient('https://mmycqeejhguzhtzkyjaj.supabase.co','sb_publishable_8Du2GAcH5oBeiHWe-1e0Fg_XtSub2QE');
 const myP = JSON.parse(localStorage.getItem('user_profile')||'{"handle":"guest"}');
@@ -340,9 +335,8 @@ async function boot(){
 
 // ── Build share URL ───────────────────────────────────────
 function buildShareUrl(){
-  // The preview URL goes through our edge function so Discord/Slack get OG tags
-  // Falls back to direct reader link if edge function isn't deployed yet
-  shareUrl = `${PREVIEW_BASE}?id=${encodeURIComponent(comicId)}`;
+  // Always points to the live GitHub Pages reader so shared links work for everyone.
+  shareUrl = `${READER_BASE}?id=${encodeURIComponent(comicId)}`;
 }
 
 // ── Render ────────────────────────────────────────────────
