fix null handle guard

--- a/profile.html
+++ b/profile.html
@@ -412,7 +412,7 @@
         function openEditor() {
             // Safety check — never open the editor if there's no handle to save with
             if (!myProfile.handle) {
-                alert('You must be logged in to edit your profile.');
+                alert('You need to be logged in to edit your profile.');
                 location.href = 'index.html';
                 return;
             }
