new create panel

--- a/create.html
+++ b/create.html
@@ -479,6 +479,7 @@
     .sb-icon-btn.active { background: rgba(255,122,0,0.15); color: var(--accent); }
     .sb-icon-btn.teal-icon { }
     .sb-icon-btn.teal-icon.active { background: rgba(0,210,255,0.12); color: var(--teal); }
+    .sb-icon-btn.teal-icon.active { background: rgba(0,210,255,0.12); color: var(--teal); }
     .sb-icon-btn.danger-icon.active { background: rgba(255,59,48,0.12); color: var(--danger); }
     .sb-icon { font-size: 21px; line-height: 1; }
     .sb-divider { width: 36px; height: 1px; background: #1a1a1a; margin: 4px 0; flex-shrink: 0; }
