--- a/create.html
+++ b/create.html
@@ -148,9 +148,9 @@
         border-radius: 6px; padding: 4px 6px; width: 58px; font-size: 12px; 
         font-weight: 700; text-align: center; font-family: inherit;
         -moz-appearance: textfield;
+        appearance: textfield;
     }
-    .t-num::-webkit-outer-spin-button, .t-num::-webkit-inner-spin-button { -webkit-appearance: none; -moz-appearance: none; appearance: none; }
-    .t-num { -moz-appearance: textfield; appearance: textfield; }
+    .t-num::-webkit-outer-spin-button, .t-num::-webkit-inner-spin-button { -webkit-appearance: none; appearance: none; }
     .t-num:focus { outline: none; border-color: var(--accent); }
     .t-row { display: flex; align-items: center; gap: 10px; }
     .t-label { font-size: 10px; width: 54px; font-weight: 800; color: #8e8e93; text-transform: uppercase; flex-shrink: 0; }
@@ -404,7 +404,9 @@
         display: none; margin-top: 6px;
     }
 
-    /* ── FX Panel (layer blur + filter) ── */
+</style>
+
+<!-- ── FX Panel (layer blur + filter) ── -->
     #fx-panel {
         position: fixed; bottom: 90px; left: 50%; transform: translateX(-50%);
         background: var(--card); border: 1px solid var(--border); border-radius: 20px;
