--- a/create.html
+++ b/create.html
@@ -404,9 +404,7 @@
         display: none; margin-top: 6px;
     }
 
-</style>
-
-<!-- ── FX Panel (layer blur + filter) ── -->
+    /* ── FX Panel (layer blur + filter) ── */
     #fx-panel {
         position: fixed; bottom: 90px; left: 50%; transform: translateX(-50%);
         background: var(--card); border: 1px solid var(--border); border-radius: 20px;
